<resources>
    <string name="app_name">MyRuns</string>
    <string name="photo_label">Profile Photo</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Your Name</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Your Email</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="phone_number_hint">Your Phone Number</string>
    <string name="gender_label">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="class_label">Class</string>
    <string name="class_hint">e.g. 2012</string>
    <string name="major_label">Major</string>
    <string name="major_hint">Your Major</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="change_button">Change</string>
    <string name="profile_preference_key">com.zw.PROFILE_PREFERENCE_KEY</string>
    <string name="settings_preference_key">com.zw.SETTINGS_PREFERENCE_KEY</string>
    <string name="default_units">Miles</string>
    <string name="last_id_saved_key">\"LAST_ID_SAVED_PREFERENCE\"</string>
    <string name="google_maps_key">AIzaSyDQrKKejdnnR-llhbOTxqAXygv5smDZxU8</string>
</resources>